[gd_scene load_steps=32 format=3]

[ext_resource type="Script" path="res://Scene/set_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c2vfl4clw7pa5" path="res://Art/set_menu/653.png" id="2"]
[ext_resource type="FontFile" uid="uid://0bcwbxanna5n" path="res://Font/Aa文徵明琴赋小楷_mianfeiziti.com.ttf" id="3"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="4"]
[ext_resource type="Texture2D" uid="uid://dhkfcv61a0hkl" path="res://Art/BackPack/49.png" id="5"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="6"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[node name="Set_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( "1" )

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -170.5
offset_right = 163.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( "2" )

[node name="more" type="Label" parent="bg"]
layout_mode = 2
offset_left = 17.0
offset_top = 280.5
offset_right = 305.0
offset_bottom = 307.5
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 18
text = "更多设置	请前往：主菜单→游戏设置"
metadata/_edit_lock_ = true

[node name="box" type="VBoxContainer" parent="bg"]
layout_mode = 0
offset_left = 19.0
offset_top = 62.0
offset_right = 292.0
offset_bottom = 309.0
theme_override_constants/separation = 20

[node name="continue_game" type="Button" parent="bg/box"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "继续游戏"

[node name="BGMControl" type="Button" parent="bg/box"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "关闭音乐"

[node name="continue_game2" type="Button" parent="bg/box"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "返回地图"

[node name="RoleOrMonsterControl" type="Button" parent="bg/box"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "关闭音效"

[node name="continue_game4" type="Button" parent="bg/box"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/pressed = SubResource( "23" )
theme_override_styles/disabled = SubResource( "24" )
theme_override_styles/focus = SubResource( "25" )
text = "返回主菜单"

[node name="close" type="TextureButton" parent="bg"]
layout_mode = 0
offset_left = 270.0
offset_top = 11.0
offset_right = 311.0
offset_bottom = 52.0
texture_normal = ExtResource( "5" )
texture_pressed = ExtResource( "5" )
texture_hover = ExtResource( "6" )
texture_disabled = ExtResource( "5" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="bg/box/continue_game" to="." method="_on_continue_game_pressed" flags=18]
[connection signal="pressed" from="bg/box/BGMControl" to="." method="_on_bgm_control_pressed" flags=18]
[connection signal="pressed" from="bg/box/continue_game2" to="." method="_on_continue_game_2_pressed" flags=18]
[connection signal="pressed" from="bg/box/RoleOrMonsterControl" to="." method="_on_role_or_monster_control_pressed" flags=18]
[connection signal="pressed" from="bg/box/continue_game4" to="." method="_on_continue_game_4_pressed" flags=18]
[connection signal="pressed" from="bg/close" to="." method="_on_close_pressed" flags=18]
